# airpod

./: .gitignore  .gitmodules  AGENTS.md  CONTAINER_NETWORK_FIXES.md  LICENSE  README.md  TODO.md  agents.md  aipod.py  podcli  pyproject.toml  pytest.ini
.github/workflows/: release.yml
aipod/: config.py
airpod/: cli.py  config.py  podman.py  services.py  state.py  ui.py
airpods/: __init__.py  cli.py  comfyui.py  config.py  cuda.py  custom_nodes.py  docker.py  gguf.py  gpu.py  logging.py  ollama.py  paths.py  plugins.py  podman.py  runtime.py  runtime_mode.py  services.py  state.py  system.py  ui.py  updates.py  webui_api.py  webui_db.py
airpods/cli/: __init__.py  command_classes.py  common.py  completions.py  help.py  status_view.py  type_defs.py
airpods/cli/commands/: __init__.py  backup.py  clean.py  config.py  doctor.py  init.py  logs.py  models.py  start.py  state.py  status.py  stop.py  version.py  workflows.py
airpods/configuration/: __init__.py  defaults.py  errors.py  loader.py  resolver.py  schema.py
docs/: AGENTS.md  development-mode.md  goals.md  troubleshooting-network-vpn.md
docs/commands/: backup.md  config.md  state.md
docs/configuration/: concurrent-pulls.md  cuda-detection.md  network.md
docs/plans/: compatibility-docker.md  custom-node-llama.md  custom_node_ollama.md  service-comfyui.md  service-gateway.md  service-llama.md  service-open-webui.md
plugins/comfyui/: README.md  simple_math_node.py
plugins/comfyui/airpods_missing_model_downloader/: __init__.py
plugins/comfyui/airpods_missing_model_downloader/web/: airpods_missing_model_downloader.js
plugins/comfyui/comfyui_airpods_tools/: README.md  __init__.py  client.py  nodes.py
plugins/comfyui/custom_nodes/comfyui-airpods/: __init__.py
plugins/comfyui/custom_nodes/comfyui_airpods_tools/: client.py
plugins/comfyui/example_nodes/: __init__.py
plugins/comfyui/workflows/: flux-dev-gguf-simple.json  flux-dev-gguf-simple.toml
plugins/open-webui/: AGENTS.md  README.md  example_prompt_helper.py
plugins/open-webui/actions/: example_action.py
plugins/open-webui/filters/: vision_router.py
plugins/open-webui/pipes/: example_pipeline.py
plugins/open-webui/tools/: example_tool.py
scripts/: mss-clamping
tests/: conftest.py  test_cli.py  test_cli_aliases.py  test_cli_backup_restore.py  test_cli_clean.py  test_cli_completions.py  test_cli_config.py  test_cli_doctor.py  test_cli_models_search.py  test_cli_prompts.py  test_cli_root.py  test_cli_services.py  test_cli_status.py  test_cli_workflows.py  test_cli_workflows_extended.py  test_config.py  test_config_volumes.py  test_configuration_loader.py  test_cuda.py  test_docker_runtime.py  test_gateway_integration.py  test_gateway_port_binding.py  test_gpu.py  test_help_renderer.py  test_plugins.py  test_runtime.py  test_runtime_mode.py  test_service_manager.py  test_state.py  test_status_detection.py  test_updates.py
