[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airpods"
version = "0.2.0"
description = "Rich, user-friendly CLI for orchestrating local AI services with Podman and UV."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9,<0.13",
  "rich>=13.0,<14.0",
  "click>=8.1,<8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9.0",
  "pytest-mock>=3.0,<4.0",
]

[project.scripts]
airpods = "airpods.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
