[project]
name = "airpods"
version = "0.19.0"
description = "Rich, user-friendly CLI for orchestrating local AI services with Podman."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "airpods contributors" }]
keywords = ["cli", "comfyui", "local-ai", "ollama", "open-webui", "podman"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.1,<8.2",
  "huggingface-hub>=0.20.0,<1.0",
  "pydantic>=2.0,<3.0",
  "requests>=2.31,<3.0",
  "rich>=13.0,<14.0",
  "tomli>=2.0.1; python_version < '3.11'",
  "tomlkit>=0.12.3",
  "typer>=0.9,<0.13",
]

[project.urls]
Homepage = "https://github.com/radicazz/airpods"
Issues = "https://github.com/radicazz/airpods/issues"
Repository = "https://github.com/radicazz/airpods"

[project.scripts]
airpods = "airpods.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9.0",
  "pytest-mock>=3.0,<4.0",
  "pytest-cov>=4.0,<6.0",
  "pre-commit>=3.4,<4.0",
]

[build-system]
requires = ["hatchling>=1.24,<2"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["airpods"]

[tool.hatch.build.targets.wheel.force-include]
"plugins/open-webui" = "plugins/open-webui"

[tool.hatch.build.targets.sdist]
include = [
  "airpods",
  "plugins/open-webui",
  "tests",
  "README.md",
  "LICENSE",
  "pyproject.toml"
]